styles/globals.css
:root {
  --clr-primary: #eddfd6; /* --clr-primary changes to #222 via javascript in dark-mode */
  --clr-secondary: #222; /* changes to #ccc in dark-mode */
  --clr-accent-500: #000; /* changes to #f7931a in light-mode */

  --ff-primary: "Roboto", sans-serif;
  --ff-body: var(--ff-primary);

  --fw-small: 500;
  --fw-regular: 600;
  --fw-semi-bold: 700;
  --fw-bold: bold;

  --fs-100: 0.75rem;
  --fs-200: 0.8125rem;
  --fs-300: 0.875rem;
  --fs-400: 1rem;
  --fs-500: 1.1rem;
  --fs-600: 1.75rem;
  --fs-700: 2rem;
  --fs-800: 2.5rem;
  --fs-900: 3.5rem;

  --fs-body: var(--fs-400);
  --fs-primary-heading: var(--fs-600);
  --fs-secondary-heading: var(--fs-500);
  --fs-tertiary-heading: var(--fs-400);
  --fs-resource-links: var(--fs-300);

  --size-100: 0.25rem;
  --size-200: 0.5rem;
  --size-300: 0.75rem;
  --size-400: 1rem;
  --size-500: 1.5rem;
  --size-600: 2rem;
  --size-700: 3rem;
  --size-800: 4rem;
  --size-900: 10rem;
}

/* larger font-sizes on desktop */
@media (min-width: 50em) {
  /* 800px */
  :root {
    --fs-body: var(--fs-400);
    --fs-primary-heading: var(--fs-700);
    --fs-secondary-heading: var(--fs-600);
    --fs-tertiary-heading: var(--fs-500);
    --fs-resource-links: var(--fs-500);
  }
}

@font-face {
  font-family: wonderlandFont;
  src: url(/wonderland-font.ttf);
}

/* CSS RESET */
/* Andy Bell's CSS reset w/ a few small changes: https://piccalil.li/blog/a-modern-css-reset/ */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
/* This is changed per Kevin Powell: https://youtu.be/h3bTwCqX4ns  */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* This is changed per Kevin Powell: https://youtu.be/h3bTwCqX4ns  */
html,
body {
  height: 100%;
}

/* Set core body defaults */
body {
  /* This is changed per Kevin Powell: https://youtu.be/h3bTwCqX4ns  */
  text-rendering: optimizeSpeed;
  line-height: 1.75;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* GENERAL STYLING */
body {
  font-size: var(--fs-body);
  font-family: var(--ff-body);
  color: var(--clr-secondary);

  background-color: var(--clr-primary);
  min-height: 100vh;

  /* position: relative; */
}

/* website layout */
.layout {
  margin: 4rem auto;
}

/* header */

.hr-top {
  display: none;

  border: none;
  border-bottom: 1px solid var(--clr-secondary);
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.hr-bottom {
  display: none;

  border: none;
  border-bottom: 1px solid var(--clr-secondary);

  margin-bottom: 1.5rem;
}

.header-primary {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  padding-left: 0.5rem; /*mobile nav toggle has 0.5rem padding*/
  background-color: var(--clr-primary);
  z-index: 2;
}

.toggle-site-name-container {
  display: flex;
  gap: 0rem;
}

.header-site-name {
  cursor: pointer;
  font-family: wonderlandFont;
  font-size: 1.5rem;
}

.header-links-container {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.header-links-container svg {
  color: var(--clr-secondary);
  width: 25px;
  height: 25px;
}

.color-mode svg {
  cursor: pointer;
  stroke: var(--clr-secondary);
}

.bitcoin-icon img {
  width: 25px;
}

@media (min-width: 50em) {
  .layout {
    margin-left: 15%;
    margin-right: 15%;
    margin-top: 5rem;
  }

  .hr-top,
  .hr-bottom {
    display: block;
  }

  .header-primary {
    padding: 0.5rem 1rem 0.5rem 0.5rem; /* burger menu has 0.5rem padding-left */
  }

  .toggle-site-name-container {
    display: flex;
    gap: 0.5rem;
  }

  .header-site-name {
    font-size: 2rem;
  }

  .header-links-container {
    gap: 1rem;
  }

  .header-links-container svg {
    width: 35px;
    height: 35px;
  }

  .bitcoin-icon img {
    width: 35px;
  }
}

/* navigation */

.nav-toggle {
  color: var(--clr-secondary);
  cursor: pointer;
  background-color: transparent;
  border: 0;
  padding: 0.5em;
}

@media (max-width: 50em) {
  /* max-width for toggle only */
  .nav-toggle {
    display: block;
    cursor: pointer;
    background-color: transparent;
    border: 0;
    padding: 0.5em;
  }

  /* come back to this for accessibility */
  .nav-toggle .icon-close {
    /* display: none; */
  }
}

@keyframes nav-position {
  from {
    left: -300px;
  }
  to {
    left: 0px;
  }
}

@media (min-width: 50em) {
  .nav-container {
    position: fixed;
    left: 0px;
    top: 0px;
    height: 100vh;
    width: 300px;
    background: var(--clr-primary);
    animation-name: nav-position;
    animation-duration: 200ms;

    z-index: 1;
  }
}

.nav-list {
  padding: 1rem;
  padding-top: 5rem;
}

.nav-list li {
  padding: var(--size-200);
  cursor: pointer;
  border-radius: 0.25em;
  text-transform: capitalize;
}

.nav-list li:hover {
  background-color: var(--clr-accent-500);
  color: var(--clr-primary);

  opacity: 0.75;
}

.current-link {
  background-color: var(--clr-accent-500);
  color: var(--clr-primary);
}

/* main */

.container {
  margin: auto;
  max-width: 100ch; /* recommended is 80char */
  padding: var(--size-400);
}

.banner-container {
  margin-bottom: var(--size-400);
}

.banner-img {
  width: 100%;
}

.title {
  padding-top: var(--size-400);
  padding-bottom: var(--size-400);

  color: var(--clr-accent-500);
  font-size: var(--fs-primary-heading);

  font-weight: var(--fw-bold);
  text-transform: capitalize;

  line-height: 1.5;
}

.guide-img {
  max-width: 600px;
  margin: auto;
}

.youtube-container-small {
  position: relative;
  max-width: 600px;
  margin: auto;
  padding-bottom: var(--size-600);

  display: flex;
  flex-direction: column;
  gap: var(--size-600);
}

.youtube-container {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
}

/* iframe fits in the container div with full height and width */
.responsive-iframe {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  height: 100%;
}

/* markdown slug */

/* subtitles */
.content h2 {
  font-size: var(--fs-secondary-heading);
  font-weight: 700;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

.content p {
  margin-bottom: var(--size-400);
}

.content a {
  color: inherit;
  text-underline-offset: 0.2em;
}

.content a:hover {
  color: var(--clr-accent-500);
}

.content ul {
  list-style: disc;
  padding-left: var(--size-500);
  color: var(--clr-accent-500);
}

.content li {
  padding-bottom: var(--size-400);
  font-size: var(--fs-resource-links);
}

/* used for youtube video titles */
.content h3 {
  font-size: var(--fs-tertiary-heading);
  color: var(--clr-accent-500);
  line-height: 1.5;
  padding-bottom: var(--size-200);
}

.quote {
  font-style: italic;
  padding-left: var(--size-400);
  padding-right: var(--size-400);
}

.quote-list {
  font-style: italic;
  padding-left: var(--size-400);
  padding-right: var(--size-400);
}

.quote-list li {
  font-size: var(--fs-body);
  color: var(--clr-secondary);
}

.attribution {
  font-style: italic;
  font-size: 0.85rem;
  text-decoration: none;
  margin-bottom: var(--size-400);
}

.guide-links-container {
  display: flex;
  justify-content: space-between;
  justify-content: space-between;
  padding-top: var(--size-700);
  padding-bottom: var(--size-700);
}

.guide-links-container-home {
  justify-content: end;
}

.guide-link {
  display: flex;
  align-items: center;

  cursor: pointer;
  font-size: var(--fs-500);
  font-weight: var(--fw-semi-bold);
  text-decoration: none;
  color: inherit;
  color: var(--clr-accent-500);

  text-transform: capitalize;
}

.guide-link:hover {
  color: var(--clr-accent-500);
  opacity: 0.75;
}

.carrot-icon {
  width: 70px;
}

/* footer */
.footer {
  position: fixed;
  z-index: 1;
  bottom: 0;
  width: 100%;

  text-align: center;
  color: var(--clr-primary);
  font-size: 0.75rem;
  font-weight: var(--fw-semi-bold);
  padding: 0.1rem;

  background-color: var(--clr-secondary);
}

.footer a {
  color: inherit;
}

.footer a:hover {
  opacity: 0.75;
}

/* UTILITY CLASSES */

/* https://a11y-guidelines.orange.com/en/web/components-examples/accessible-hiding/ */
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: no-wrap;
  border: 0;
}

@media (max-width: 50em) {
  .hidden-on-mobile {
    display: none;
  }
}

